@@ -2,11 +2,23 @@ package no.nav.registre.sdforvalter.consumer.rs;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 import lombok.extern.slf4j.Slf4j;
+import no.nav.registre.sdforvalter.config.credentials.PersonServiceProperties;
+import no.nav.registre.sdforvalter.domain.TpsIdent;
+import no.nav.registre.sdforvalter.domain.TpsIdentListe;
+import no.nav.registre.sdforvalter.domain.person.Person;
+import no.nav.registre.sdforvalter.exception.UgyldigIdentException;
+import no.nav.testnav.libs.commands.CreatePersonCommand;
+import no.nav.testnav.libs.commands.GetPersonCommand;
+import no.nav.testnav.libs.dto.person.v1.Persondatasystem;
+import no.nav.testnav.libs.securitycore.domain.AccessToken;
+import no.nav.testnav.libs.securitycore.domain.ServerProperties;
+import no.nav.testnav.libs.standalone.servletsecurity.exchange.TokenExchange;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.http.MediaType;
 import org.springframework.http.codec.json.Jackson2JsonDecoder;
 import org.springframework.http.codec.json.Jackson2JsonEncoder;
 import org.springframework.stereotype.Component;
+import org.springframework.web.reactive.function.client.ExchangeFilterFunction;
 import org.springframework.web.reactive.function.client.ExchangeStrategies;
 import org.springframework.web.reactive.function.client.WebClient;
 
@@ -18,19 +30,6 @@ import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.Executor;
 import java.util.concurrent.Executors;
-import java.util.stream.Collectors;
-
-import no.nav.registre.sdforvalter.config.credentials.PersonServiceProperties;
-import no.nav.registre.sdforvalter.domain.TpsIdent;
-import no.nav.registre.sdforvalter.domain.TpsIdentListe;
-import no.nav.registre.sdforvalter.domain.person.Person;
-import no.nav.registre.sdforvalter.exception.UgyldigIdentException;
-import no.nav.testnav.libs.commands.CreatePersonCommand;
-import no.nav.testnav.libs.commands.GetPersonCommand;
-import no.nav.testnav.libs.dto.person.v1.Persondatasystem;
-import no.nav.testnav.libs.securitycore.domain.ServerProperties;
-import no.nav.testnav.libs.servletsecurity.domain.AccessToken;
-import no.nav.testnav.libs.servletsecurity.exchange.TokenExchange;
 
 @Slf4j
 @Component
@@ -44,8 +43,9 @@ public class PersonConsumer {
     public PersonConsumer(
             ObjectMapper objectMapper, @Value("${consumers.person.threads}") Integer threads,
             PersonServiceProperties personServiceProperties,
-            TokenExchange tokenExchange
-    ) {
+            TokenExchange tokenExchange,
+            ExchangeFilterFunction metricsWebClientFilterFunction) {
+
         this.serviceProperties = personServiceProperties;
         this.tokenExchange = tokenExchange;
 
@@ -61,10 +61,11 @@ public class PersonConsumer {
                 .builder()
                 .exchangeStrategies(jacksonStrategy)
                 .baseUrl(personServiceProperties.getUrl())
+                .filter(metricsWebClientFilterFunction)
                 .build();
+
         this.executor = Executors.newFixedThreadPool(threads);
     }
-
 
     private CompletableFuture<Person> hentPerson(String ident, AccessToken accessToken) {
         var command = new GetPersonCommand(webClient, ident, accessToken.getTokenValue(), Persondatasystem.PDL, null);
@@ -75,9 +76,9 @@ public class PersonConsumer {
     }
 
     public List<Person> hentPersoner(Set<String> identer) {
-        AccessToken accessToken = tokenExchange.generateToken(serviceProperties).block();
+        AccessToken accessToken = tokenExchange.exchange(serviceProperties).block();
         List<Person> personer = new ArrayList<>();
-        var futures = identer.stream().map(ident -> hentPerson(ident, accessToken)).collect(Collectors.toList());
+        var futures = identer.stream().map(ident -> hentPerson(ident, accessToken)).toList();
         for (CompletableFuture<Person> future : futures) {
             try {
                 Person person = future.get();
@@ -90,18 +91,17 @@ public class PersonConsumer {
     }
 
     public void opprettPersoner(TpsIdentListe identer) {
-        AccessToken accessToken = tokenExchange.generateToken(serviceProperties).block();
+        AccessToken accessToken = tokenExchange.exchange(serviceProperties).block();
         List<CompletableFuture<TpsIdent>> futures = identer.stream().map(ident -> CompletableFuture.supplyAsync(() -> {
                     try {
-                        new CreatePersonCommand(webClient, ident.toDTO(), accessToken.getTokenValue(), ident.getOpprinnelse()).run();
+                        new CreatePersonCommand(webClient, ident.toDTO(), accessToken.getTokenValue(), ident.getOpprinnelse()).call().block();
                         return ident;
                     } catch (Exception e) {
                         log.error("Kunne ikke opprette ident {}", ident.getFnr(), e);
                         return null;
                     }
                 }, executor)
-        ).collect(Collectors.toList());
-
+        ).toList();
 
         List<TpsIdent> opprettedeIdenter = futures.stream().map(future -> {
             try {
@@ -110,7 +110,7 @@ public class PersonConsumer {
                 log.error("Noe gikk galt ved henting av resultat fra tråd", e);
                 return null;
             }
-        }).collect(Collectors.toList());
+        }).toList();
 
         if (opprettedeIdenter.stream().anyMatch(Objects::isNull)) {
             throw new UgyldigIdentException("Klarte ikke å opprette alle identer");
